testdata/baselines/reference/submodule/compiler/jsDeclarationEmitExportAssignedArray.errors.txt
file.js(1,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.


==== file.js (1 errors) ====
    module.exports = [{ name: 'other', displayName: 'Other', defaultEnabled: true }];
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.